--- a/UI/index.html
+++ b/UI/index.html
@@ -18,33 +18,33 @@
 
 <body>
     <div class="main-wrapper">
-        <header class="black clr-white">
+        <header class="wrapper flex-row no-wrap black clr-white j-btwn a-center sticky-top">
             <h1>Way<span class="clr-primary">Farer</span></h1>
             <div class="links">
-                <a href="#">Sign in</a>
-                <a href="#">Sign up</a>
+                <a href="#" class="clr-white">Sign in</a>
+                <a href="#" class="ml-2 clr-white">Sign up</a>
             </div>
         </header>
-        <div id="showcase">
+        <div id="showcase" class="black-secondary clr-white wrapper flex-row no-wrap j-btwn pt-2 pb-2">
             <div>
-                <h2>
-                    Welcome to WayFarer,
-                    your trusted online
-                    bus booking system.
+                <h2 class="fw-3">
+                    Welcome to Way<span class="clr-primary">Farer</span>
+                    , Your trusted online
+                    Bus booking system.
                 </h2>
-                <a href="#">Sign up here</a>
+                <a cls="" href="#">Sign up here</a>
             </div>
             <div>
                 <img src="./img/bus-3-modified.png" alt="">
             </div>
         </div>
-        <div id="">
-            <h2>Today's Trips</h2>
+        <div id="available trips" class="wrapper mt-3">
+            <h2 class="flex center">Today's Trips</h2>
             <div id="trips">
                 No trip Today
             </div>
         </div>
-        <div id="awards">
+        <div id="awards" class="wrapper flex-row j-btwn mt-3">
             <div class="award">
                 <img src="" alt="" />
                 <h4>1200</h4>
@@ -66,35 +66,37 @@
                 <h4>Contributors</h4>
             </div>
         </div>
-        <div id="email-subscription-form">
-            <form name="email-list-form" method="POST">
-                <div>
+        <div id="email-subscription-form" class="wrapper mt-3">
+            <form name="email-list-form" method="POST" class="flex-col center">
+                <div class="">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name"/>
+                    <input type="text" id="name" name="name" />
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email"/>
+                    <input type="email" id="email" name="email" />
                 </div>
                 <button type="submit" name="submit">Submit</button>
             </form>
-            <h3>We promise to keep your email safe</h3>
+            <h3 class="flex center mt-1">We promise to keep your email safe</h3>
         </div>
-        <footer class="footer black">
+        <footer class="wrapper black clr-white mt-3 pt-1 pb-2">
             <div class="social">
-                <img class="social-1 wtp" src="" alt=""/>
-                <img class="social-2 inst" src="" alt=""/>
-                <img class="social-3 twt" src="" alt=""/>
+                <img class="social-1 wtp" src="" alt="" />
+                <img class="social-2 inst" src="" alt="" />
+                <img class="social-3 twt" src="" alt="" />
                 <img class="social-4 src="" alt=""/>
             </div>
-            <div>
-                <p>&copy; 2020 way<span>Farer</span></p>
-                <div>
-                    <a href="#">Terms of services</a>
-                    <a href="#">Privacy Policy</a>
+            <div class="bda-t">
+                <div class="flex-row j-btwn pt-1">
+                    <p>&copy; 2020 way<span class="clr-primary">Farer</span></p>
+                    <div class="">
+                        <a href="#">Terms of services</a>
+                        <a href="#">Privacy Policy</a>
+                    </div>
                 </div>
             </div>
-        </footer> 
+        </footer>
     </div>
 
     <script src="./main.js"></script>
