--- a/UI/index.html
+++ b/UI/index.html
@@ -67,7 +67,8 @@
             </div>
         </div>
         <div id="email-subscription-form" class="wrapper mt-3">
-            <form name="email-list-form" method="POST" class="flex-col center">
+            <h3 class="flex center mb-2">Subscribe to our mail list</h3>
+            <form name="email-list-form" method="POST" class="">
                 <div class="">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" />
@@ -76,9 +77,9 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" />
                 </div>
-                <button type="submit" name="submit">Submit</button>
+                <input class="flex center mt-1"type="submit" name="submit" value="I'm in!"/>
             </form>
-            <h3 class="flex center mt-1">We promise to keep your email safe</h3>
+            <h3 class="flex center mt-1 fw-5 clr-secondary">We promise to keep your email safe</h3>
         </div>
         <footer class="wrapper black clr-white mt-3 pt-1 pb-2">
             <div class="social">
