--- a/UI/index.html
+++ b/UI/index.html
@@ -11,6 +11,7 @@
     online bus booking system" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="./deskastyle.css"/>
     <link rel="stylesheet" href="./main.css" />
 
     <title>WayFarer</title>
@@ -25,14 +26,12 @@
                 <a href="#" class="ml-2 clr-white">Sign up</a>
             </div>
         </header>
-        <div id="showcase" class="black-secondary clr-white wrapper flex-row no-wrap j-btwn pt-2 pb-2">
+        <div id="showcase" class="black-secondary clr-white wrapper flex-row no-wrap j-btwn vh-3 a-center">
             <div>
-                <h2 class="fw-3">
-                    Welcome to Way<span class="clr-primary">Farer</span>
+                    <h1 class="fw-3">Welcome to Way<span class="clr-primary">Farer</span>
                     , Your trusted online
-                    Bus booking system.
-                </h2>
-                <a cls="" href="#">Sign up here</a>
+                    Bus booking system.</h1>
+                <a class="button mt-1 clr-white" href="#">Sign up here</a>
             </div>
             <div>
                 <img src="./img/bus-3-modified.png" alt="">
@@ -44,26 +43,26 @@
                 No trip Today
             </div>
         </div>
-        <div id="awards" class="wrapper flex-row j-btwn mt-3">
+        <div id="awards" class="wrapper flex-row j-btwn mt-3 pt-2 pb-3 clr-black text-center">
             <div class="award">
-                <img src="" alt="" />
-                <h4>1200</h4>
-                <h4>Annual Trips</h4>
+                <img src="./img/awesome-bus.png" alt="" />
+                <h3>1200</h3>
+                <h3>Annual Trips</h3>
             </div>
             <div class="award">
-                <img src="" alt="" />
-                <h4>450</h4>
-                <h4>Satisfied</h4>
+                <img src="./img/ionic-ios-people.png" alt="" />
+                <h3>450</h3>
+                <h3>Satisfied</h3>
             </div>
             <div class="award">
-                <img src="" alt="" />
-                <h4>4</h4>
-                <h4>awards</h4>
+                <img src="./img/award.png" alt="" />
+                <h3>4</h3>
+                <h3>awards</h3>
             </div>
             <div class="award">
-                <img src="" alt="" />
-                <h4>23</h4>
-                <h4>Contributors</h4>
+                <img src="./img/awesome-people-carry.png" alt="" />
+                <h3>23</h3>
+                <h3>Contributors</h3>
             </div>
         </div>
         <div id="email-subscription-form" class="wrapper mt-3">
@@ -77,16 +76,16 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" />
                 </div>
-                <input class="flex center mt-1"type="submit" name="submit" value="I'm in!"/>
+                <input class="mt-1 bg-secondary"type="submit" name="submit" value="I'm in!"/>
             </form>
             <h3 class="flex center mt-1 fw-5 clr-secondary">We promise to keep your email safe</h3>
         </div>
         <footer class="wrapper black clr-white mt-3 pt-1 pb-2">
-            <div class="social">
-                <img class="social-1 wtp" src="" alt="" />
-                <img class="social-2 inst" src="" alt="" />
-                <img class="social-3 twt" src="" alt="" />
-                <img class="social-4 src="" alt=""/>
+            <div class="social mb-1">
+                <a href="#"><img class="social-m wtp mr-1" src="./img/awesome-whatsapp.png" alt="Whatsapp" /></a>
+                <a href="#"><img class="social-m inst mr-1" src="./img/awesome-instagram.png" alt="Instagram" /></a>
+                <a href="#"><img class="social-m twt mr-1" src="./img/awesome-twitter.png" alt="Twitter" /></a>
+                <a href="#"><img class="social-m fcbk" src="./img/awesome-facebook.png" alt="Facebook"/></a>
             </div>
             <div class="bda-t">
                 <div class="flex-row j-btwn pt-1">
