Add header wrapper

--- a/UI/index.html
+++ b/UI/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="main-wrapper">
-        <header class="wrapper flex-row no-wrap black clr-white j-btwn a-center sticky-top">
+        <header class="wrapper wrapper-head flex-row no-wrap black clr-white j-btwn a-center sticky-top">
             <h1>Way<span class="clr-primary">Farer</span></h1>
             <div class="links">
                 <a href="#" class="clr-white">Sign in</a>
